[tool.poetry]
name = "oai-pmh-client"
version = "0.1.0"
description = ""
authors = ["Paul Storey <paul.storey@bodleian.ox.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
Sickle = "^0.7.0"
defusedxml = "^0.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
